# cruxible

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISION.md  NOTICE  README.md  context7.json  mkdocs.yml  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/read_anchor/: BASELINE.md  FINAL.md  POST_TRACK.md  baseline_results.json  capture.py  final_results.json  post_track_results.json  tasks.json
configs/: _template.yaml  car_parts.yaml
demos/: README.md
demos/case-law-monitoring/: README.md  config.yaml  courtlistener-reference.yaml  providers.py
demos/kev-triage/: README.md
deploy/local/: private-runtime-network.compose.yml
deploy/runtime/: Dockerfile  entrypoint.sh
docs/: agent-operation-guide.md  case-law-guide.md  cli-reference.md  common-providers.md  compact-config.md  concepts.md  config-reference.md  config-template.yaml  deep-dive.md  deploy-plan.md  for-ai-agents.md  hosted-runtime-image.md  index.md  isolated-deployment.md  kev-guide.md  kit-authoring.md  kit-walkthroughs.md  llms-full.txt  llms.txt  local-state-and-backups.md  mcp-tools.md  modeling-state.md  publishing-states.md  quickstart.md  runtime-auth-and-agent-roles.md  skill-classification-at-scale.md  state-resolution-and-maintenance.md  supply-chain-guide.md  world-model-kind.md
docs/assets/: brand.css
docs/dev/: compact-authoring.md  read-ergonomics-design.md
docs/recipes/: llm-wiki-to-instance.md
examples/wiki-import-demo/: CLAUDE.md  README.md  architecture-decisions.md  onboarding-map.md  open-questions.md  risks-and-gotchas.md  sprint-notes.md
kits/: README.md
kits/agent-operation/: README.md  config.expanded.yaml  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
kits/agent-release/: README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
kits/case-law-monitoring/: README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
kits/kev-reference/: README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
kits/kev-triage/: .mcp.json  README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml  kev-reference.yaml
kits/project-domain/: README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
kits/project-state/: README.md  config.yaml  cruxible-kit.yaml
kits/retail-catalog/: README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
kits/supply-chain-blast-radius/: README.md  config.yaml  cruxible-kit.yaml  cruxible.lock.yaml
packaging/cruxible-core-stub/: README.md  pyproject.toml
scripts/: build_kit_bundles.py  check_kit_lockfiles.py  check_kit_release_assets.py  check_review_handoff.py  ci_parity.sh  generate_kit_docs.py  generate_llms_txt.py  generate_skill_docs.py  import_markdown.py  publish_kev_release.py  update_client_contract_snapshot.py  update_http_surface_snapshot.py
skills/classification-at-scale/: SKILL.md
skills/create-state/: SKILL.md
skills/overlay-and-fit/: SKILL.md
skills/prepare-data/: SKILL.md
skills/review-state/: SKILL.md
skills/review-world/: SKILL.md
skills/wiki-to-state/: SKILL.md
src/cruxible_core/: __init__.py  canonical_json.py  canonical_views.py  config_views.py  errors.py  instance_protocol.py  kit_defaults.py  kits.py  predicate.py  primitives.py  read_surface.py  temporal.py  workflow_execution_types.py  working_set.py  world_refs.py
src/cruxible_kits/: supply_chain_blast_radius.py
tests/: conftest.py  test_errors.py  test_evaluate.py  test_predicate.py  test_primitives.py  test_temporal.py
tests/fixtures/: car_parts.yaml
tests/support/: client_contracts.py  http_surface.py  kev_golden.py  state_cross_section.py  workflow_helpers.py  workflow_test_providers.py
tests/test_architecture/: test_runtime_boundaries.py
tests/test_attestations/: __init__.py  conftest.py  test_procedure_evidence.py  test_service.py  test_types_and_store.py
tests/test_cli/: conftest.py  test_attestation_commands.py  test_commands.py  test_continuation.py  test_credentials_bootstrap.py  test_credentials_recover_admin.py  test_gate_commands.py  test_help_surface.py  test_instance.py  test_multi_kit_init.py  test_procedure_commands.py  test_review_submit.py  test_server_mode.py  test_server_restart.py  test_server_start.py  test_server_status.py  test_source_commands.py  test_startup_imports.py  test_state_cli.py  test_state_command_flow_smoke.py  test_target_visibility.py  test_transport_errors.py  test_wiki_command.py  test_workflow_commands.py  test_working_set.py  test_world_cli.py
tests/test_client/: test_contract_snapshot.py  test_http_client.py  test_http_client_timeouts.py
tests/test_config/: test_check_kit_lockfiles.py  test_compact.py  test_composer.py  test_composer_integration.py  test_composition_ownership.py  test_constraint_rules.py  test_gates_config.py  test_governance_diff.py  test_kit_distribution.py  test_kit_lockfiles.py  test_kits.py  test_loader.py  test_schema.py  test_validator.py
tests/test_decision/: test_decision_types.py  test_store.py
tests/test_demos/: test_agent_recipes_smoke.py  test_case_law.py  test_kev_quickstart_smoke.py  test_kev_triage.py  test_standalone_kit_authoring_smoke.py
tests/test_feedback/: test_feedback.py
tests/test_golden/: test_kev_golden_states.py
tests/test_governance/: __init__.py  test_actor_context.py
tests/test_graph/: test_assertion_state.py  test_entity_graph.py  test_operations.py  test_provenance.py  test_types.py
tests/test_group/: test_evidence_guard.py  test_store.py  test_types.py
tests/test_guardrails/: test_contract_freeze.py  test_docker_marker.py  test_primitives_consolidation.py  test_reference_docs.py  test_store_registration.py  test_vocabulary.py  test_wheel_marker.py
tests/test_image/: test_runtime_image.py
tests/test_ingest/: test_ingest.py
tests/test_mcp/: conftest.py  test_attestation_tools.py  test_feedback_write_tier_permissions.py  test_governed_write_handlers.py  test_group_handlers.py  test_handlers.py  test_permissions.py  test_procedure_tools.py  test_read_profiles.py  test_server_mode.py  test_tool_schema.py  (+2 more)
(+420 files in other folders)
