[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cruxible"
version = "0.2.2"
description = "Hard state for AI agents: typed, governed, durable state with deterministic queries, governed writes, and receipts."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Cruxible LLC"},
]
keywords = ["ai-agents", "hard-state", "state-management", "ontology", "knowledge-graph", "governance", "provenance", "agent-memory", "mcp", "workflows", "deterministic", "receipts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "cruxible-client==0.2.2",
    "pydantic>=2.0",
    "networkx>=3.0",
    "polars>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.24",
    "pypdf>=5.0",
    "markdown-it-py>=4.0",
    "fastapi>=0.100",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.20",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
# The daemon ships in the default install; kept as an empty alias so
# `pip install "cruxible[server]"` from older docs keeps working.
server = []
# Layout-aware PDF parsing (the pdf_to_markdown docling backend) pulls the
# docling ML stack (~1GB incl. torch); opt in when you need it.
pdf = ["docling>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff==0.15.0",
    "mypy>=1.10",
    "docling>=2.0",
]

[project.scripts]
cruxible = "cruxible_core.cli.main:cli"
cruxible-mcp = "cruxible_core.mcp.server:main"
# The daemon launches only via `cruxible server start`; there is no separate
# `cruxible-server` console-script (removed in wi-server-cli-verb-consistency).

[project.urls]
Homepage = "https://github.com/cruxible-ai/cruxible"
Documentation = "https://github.com/cruxible-ai/cruxible/tree/main/docs"
Repository = "https://github.com/cruxible-ai/cruxible"

[tool.hatch.build.targets.wheel]
packages = ["src/cruxible_core"]

[tool.uv.workspace]
members = ["packages/cruxible-client"]

[tool.uv.sources]
cruxible-client = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "packages/cruxible-client/src"]
markers = [
    "docker: requires a working Docker daemon and may build or run container images",
    "wheel: builds and installs the distribution wheel into a throwaway venv; requires build tooling",
]

[tool.ruff]
src = ["src", "packages/cruxible-client/src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src:packages/cruxible-client/src"
packages = ["cruxible_core", "cruxible_client"]

[dependency-groups]
dev = [
    "types-networkx>=3.6.1.20260303",
    "types-pyyaml>=6.0.12.20250915",
]
