[project]
name = "cruxible-core"
version = "0.2.0"
description = "Compatibility stub: the package is now `cruxible`. Installing this pulls it in."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cruxible==0.2.0"]
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/cruxible-ai/cruxible"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
